[package]
name = "pnt"
version = "0.1.3"
authors = ["baifangkual <baifangkuai@live.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A simple TUI password note application"
readme = "README.md"
homepage = "https://github.com/baifangkual/pnt"
repository = "https://github.com/baifangkual/pnt"
keywords = ["tui-app", "password-manager", "notes-app"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true # https://doc.rust-lang.org/rustc/codegen-options/index.html#strip

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["alloc"] }
aes-gcm = "0.10.3"
thiserror = "2.0.12"
base64ct = { version = "1.8.0", features = ["alloc"] }
rpassword = "7.4.0"
dirs = "6.0.0"
toml = "0.8.23"
unicode-width = "0.2.0"
unicode-segmentation = "1.12.0"
tui-textarea = "0.7.0"


